Resourcesdir = $(pkgdatadir)/data

Fontsdir = $(Resourcesdir)/fonts
Fonts_DATA = fonts/FreeMonoBoldOblique.ttf fonts/FreeMono.ttf

Imagesdir = $(Resourcesdir)/images
Images_DATA = images/black_chip_80x80.png images/board_1400x1400.png images/orientation_80x80.png images/striker_80x80.png images/white_chip_80x80.png

Sounddir = $(Resourcesdir)/sound
Sound_DATA = sound/low_collision.wav


EXTRA_DIST = $(Fonts_DATA) $(Images_DATA) $(Sound_DATA)