AM_CPPFLAGS = -I$(top_srcdir)
bin_PROGRAMS = carom
carom_SOURCES = board.cpp game_over.cpp img.cpp instructions.cpp main_menu.cpp physics.cpp screen.cpp speed.cpp text.cpp vector.cpp chips.cpp game_states.cpp init.cpp main.cpp orientation.cpp scores.cpp sound.cpp striker.cpp utils.cpp globals.h
carom_DEPENDENCIES = globals.h